focus ring on links

--- a/app/styles/links.scss
+++ b/app/styles/links.scss
@@ -3,7 +3,7 @@ a {
 	cursor:pointer;
 	display:inline-block;
     text-decoration:none;
-	color:var(--link-color);
+	color:var(--text-color);
 	transition:color 0.3s;
 
 	&:hover {
