Introduces a feedback widget

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -23,6 +23,7 @@
 @import "components/footer";
 @import "components/header";
 @import "components/sidebar";
+@import "components/feedback-form";
 @import "components/layout/gap";
 @import "components/layout/helm";
 @import "components/layout/line";
