--- a/app/components/feedback-form/template.hbs
+++ b/app/components/feedback-form/template.hbs
@@ -27,28 +27,23 @@
 		>
 			<div class='feedback-form'>
 				<form>
-					<div class="category-select">
-						<select>
-							<option value="" disabled selected>Feeback category</option>
-							<option value="feedback">Feedback</option>
-							<option value="bug">Bug</option>
-							<option value="idea">Idea</option>
+					<div class='category-select'>
+						<select {{on 'change' this.setCategory}}>
+							{{#each this.categories as |category|}}
+								<option value={{category.value}}>
+									{{category.label}}
+								</option>
+							{{/each}}
 						</select>
 					</div>
-					{{!-- <Input
-						@value={{this.email}}
-						name='email'
-						id='email-input'
-						placeholder='Enter your email address'
-					/> --}}
 					<Textarea
-						@value={{this.lastname}}
+						@value={{this.feedback}}
 						rows='5'
 						name='feedback'
 						id='feedback-input'
 						placeholder='What are your thoughts'
 					/>
-					<button type='submit'>
+					<button type='button' {{on 'click' this.submitFeedback}}>
 						Submit
 					</button>
 				</form>
