--- a/app/templates/docs/surrealql/statements/live-select.hbs
+++ b/app/templates/docs/surrealql/statements/live-select.hbs
@@ -7,7 +7,11 @@
 
 <Layout::Text text-l text-f>
     <h2><code>LIVE SELECT</code> statement</h2>
-	<p>The LIVE SELECT statement can be used to initiate a live selection against a table, optionally with filters.</p>
+	<p>The <code>LIVE SELECT</code>code> statement can be used to initiate a real-time selection from a table, including the option to apply filters.</p>
+	<p>
+		In practical terms, when you execute a <code>LIVE SELECT</code> query, it triggers an ongoing session that captures any subsequent changes to the data in real-time.
+		These changes are then immediately transmitted to the client, ensuring that the client is consistently updated with the latest data modifications.
+	</p>
 </Layout::Text>
 
 <Layout::Gap mini />
