--- a/app/templates/docs/security/index.hbs
+++ b/app/templates/docs/security/index.hbs
@@ -5,28 +5,16 @@
 
 <Layout::Text text-l text-f>
     <h2>Security</h2>
-    <p>SurrealDB offers powerful security features. Because of it's complexity, we dedicate this segment of the documentation to how security works within SurrealDB, and to discuss best-practices.</p>
+	<p>Documentation of the security features of SurrealDB.</p>
 </Layout::Text>
 
 <Layout::Gap mini />
 
 <Layout::Boxes cols-3-to-2-to-1>
-	<LinkTo @route="docs.security.paradigmes">
+	<LinkTo @route="docs.security.authentication">
 		<Layout::Boxes::Item mini hover>
-			<h4>Paradigmes</h4>
-			<p>Difference between System users and Scope authentication.</p>
-		</Layout::Boxes::Item>
-	</LinkTo>
-	<LinkTo @route="docs.security.scope-authentication">
-		<Layout::Boxes::Item mini hover>
-			<h4>Scope authentication</h4>
-			<p>How to apply scope authentication, and how to set it up.</p>
-		</Layout::Boxes::Item>
-	</LinkTo>
-	<LinkTo @route="docs.security.system-users">
-		<Layout::Boxes::Item mini hover>
-			<h4>System users</h4>
-			<p>What can system users be used for, and how do you define them.</p>
+			<h4>Authentication</h4>
+			<p>Documentation of the different authentication mechanisms.</p>
 		</Layout::Boxes::Item>
 	</LinkTo>
 </Layout::Boxes>
